[package]
name = "xchecker-prompt-template"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
description = "Prompt template types for xchecker LLM configuration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/xchecker"
homepage = "https://github.com/EffortlessMetrics/xchecker"
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Internal dependencies
xchecker-utils = { path = "../xchecker-utils" }

# External dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
