[package]
name = "xchecker-prompt-template"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Prompt template types for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
# Internal dependencies
xchecker-utils = { workspace = true }

# External dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
