[package]
name = "xchecker-receipt"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
xchecker-utils = { path = "../xchecker-utils" }
xchecker-redaction = { path = "../xchecker-redaction", version = "1.0.0" }
anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }

[dev-dependencies]
xchecker-utils = { path = "../xchecker-utils", features = ["test-utils"] }
tempfile = { workspace = true }
