[package]
name = "xchecker-receipt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "JSON receipt generation with cryptographic hashes"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
xchecker-utils = { workspace = true }
xchecker-redaction = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }

[dev-dependencies]
xchecker-utils = { workspace = true, features = ["test-utils"] }
tempfile = { workspace = true }
