[package]
name = "xchecker-runner"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true, features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["processthreadsapi", "winnt", "handleapi", "psapi"] }
dunce = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
