[package]
name = "xchecker-selectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "File selector patterns and glob matching for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
globset = { workspace = true }
serde = { workspace = true }
xchecker-utils = { workspace = true }

[dev-dependencies]
xchecker-utils = { workspace = true, features = ["test-utils"] }
