[package]
name = "xchecker-templates"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
xchecker-utils = { path = "../xchecker-utils", version = "1.0.0" }

[dev-dependencies]
tempfile = { workspace = true }
