[package]
name = "xchecker-templates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Spec template initialization for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
xchecker-utils = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
