[package]
name = "xchecker-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Terminal user interface for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
# Internal dependencies
xchecker-engine = { workspace = true }
xchecker-utils = { workspace = true }

# External dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
# For testing
tempfile = { workspace = true }
