[package]
name = "xchecker-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Input validation utilities for xchecker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
xchecker-utils = { workspace = true }
regex = { workspace = true }
